Exclude border from overflow scroller in sticky constraints.

BUG=664373
TEST=LayoutBoxModelObjectTest.StickyPositionConstraints, LayoutBoxModelObjectTest.StickyPositionContainerIsScroller

Review-Url: https://codereview.chromium.org/2494933002
Cr-Commit-Position: refs/heads/master@{#431982}

Former-commit-id: 177abac624e0be0d9d94c7cc1392f9beddf97c87